# pgqc

./: README.md  pyproject.toml
.github/workflows/: ci.yml
jupyter_notebooks/: 231005.DevRoaryParsing.V1.ipynb
pgqc/: KmerComp.AllvsAll.py  __init__.py  _version.py  asm_gene_search.py  ava.py  nscluster.py  utils.py
scripts/: KmerComp.AllvsAll.V3.py
