[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgqc"
description = "Pan-genome quality control for Panaroo"
version = "0.0.0"
authors = [
    { name = "Maximillian Marin", email = "maximilliangmarin@gmail.com" }
]

requires-python = ">=3.7"
dependencies = [
	"pandas",
	"mmh3",
	"screed",
	"mappy==2.26",
	"networkx",
	"tqdm",
        "importlib-metadata; python_version < '3.8'"
]


[project.scripts]
pgqc = "pgqc.__init__:main"

[project.optional-dependencies]
test = [
	"pytest"
]

[project.urls]
"Homepage" = "https://github.com/maxgmarin/pgqc"
